--- a/service/site/gabulous.css
+++ b/service/site/gabulous.css
@@ -1,6 +1,7 @@
 #twitter_button {
   display:block;
   height:70px;
+  border:1px solid red;
   width:450px;
   background: url('images/sign-in-with-twitter.png') no-repeat 0 0;
 }
