preventing routing to login page if session exists

--- a/service/views/layout.jade
+++ b/service/views/layout.jade
@@ -6,3 +6,5 @@ html
   body
     h1 GABULOUS
     != body
+    script(src='http://code.jquery.com/jquery-1.7.1.min.js');
+    script(src='/javascripts/twitter_client.js')
