retrieving twitter data client-side

--- a/service/views/layout.jade
+++ b/service/views/layout.jade
@@ -7,4 +7,5 @@ html
     h1 GABULOUS
     != body
     script(src='http://code.jquery.com/jquery-1.7.1.min.js');
+    script(src='/javascripts/jquery.cookie.js')
     script(src='/javascripts/twitter_client.js')
