--- a/service/views/layout.jade
+++ b/service/views/layout.jade
@@ -9,3 +9,9 @@ html
     script(src='http://code.jquery.com/jquery-1.7.1.min.js');
     script(src='/javascripts/jquery.cookie.js')
     script(src='/javascripts/twitter_client.js')
+    script(src='/javascripts/3d/RequestAnimationFrame.js')
+    script(src='/javascripts/3d/Three.js')
+    script(src='/javascripts/3d/Tween.js')
+    script(src='/javascripts/3d/sb.js')
+    script(src='/javascripts/application.js')
+    
