--- a/service/views/layout.jade
+++ b/service/views/layout.jade
@@ -3,15 +3,23 @@ html
   head
     title Gabulous
     link(rel='stylesheet', href='/stylesheets/gabulous.css')
+    link(rel='stylesheet', href='/stylesheets/sb.css')
   body
     h1 GABULOUS
     != body
     script(src='http://code.jquery.com/jquery-1.7.1.min.js');
     script(src='/javascripts/jquery.cookie.js')
     script(src='/javascripts/twitter_client.js')
+    script(src='/javascripts/jquery.mousewheel.js');
     script(src='/javascripts/3d/RequestAnimationFrame.js')
     script(src='/javascripts/3d/Three.js')
     script(src='/javascripts/3d/Tween.js')
     script(src='/javascripts/3d/sb.js')
+    script(src='/javascripts/3d/gabatar.js')
+    script(src='/javascripts/3d/gabber.js')
+    script(src='/javascripts/3d/GabClient.js')
+    script(src='/javascripts/3d/gabscape-GabClient.js')
+    script(src='/javascripts/3d/gabscape-network.js')
+    script(src='/javascripts/network/faye-browser.js')
     script(src='/javascripts/application.js')
     
