Fixed materials bug

--- a/service/public/stylesheets/gabulous.css
+++ b/service/public/stylesheets/gabulous.css
@@ -6,7 +6,7 @@
 }
 #container {
   overflow: hidden;
-  background-color: #000;
+  background-color: #9cf;
   width: 98%;
   height: 80%;
   position: absolute;
