--- a/service/public/stylesheets/gabulous.styl
+++ b/service/public/stylesheets/gabulous.styl
@@ -8,7 +8,7 @@
 
 #container {
   overflow:hidden;
-  background-color:#000000;
+  background-color:#99ccff;
   width:98%;
   height:80%; 
   position:absolute;
