yay, more stuff

--- a/service/views/authenticated.jade
+++ b/service/views/authenticated.jade
@@ -1,3 +1,7 @@
 div#user-name #{screenName}
 #container
 #twitter_input
+  #twitter_profile_pic
+  form#twitter_input_form
+    textarea
+    input(type="submit", value="Tweet!")
