--- a/service/public/stylesheets/gabulous.styl
+++ b/service/public/stylesheets/gabulous.styl
@@ -1,10 +1,14 @@
+body {
+  background:black;
+  color: white;
+}
+
 #twitter_button {
   display:block;
   height:70px;
   width:450px;
   background: url('../images/sign-in-with-twitter.png') no-repeat 0 0;
 }
-
 
 #container {
   overflow:hidden;
@@ -14,8 +18,27 @@
   position:absolute;
 }
 
-#twitter_input {
+.annotation {
+  color:black;
+}
 
+#twitter_input {
+  position:absolute;
+  background: #99ccff;
+  top:20px;
+  right:40px;
+  z-index:1;
+  width:400px;
+  height:200px;
+  border:5px solid white;
+  border-radius:5px; 
+  padding:20px;
+  #twitter_profile_pic {
+    height:48px;
+    width:48px;
+    border-radius:5px;
+    border:4px solid white;
+  }
 }
 
 
