--- a/service/public/stylesheets/gabulous.styl
+++ b/service/public/stylesheets/gabulous.styl
@@ -41,4 +41,19 @@ body {
   }
 }
 
-
+footer {
+  border:1px solid red;
+  height:50px;
+  position: absolute;
+  bottom:0;
+  width:98%;
+  li {
+    list-style-type:none
+    margin-right:10px;
+    float:left;
+    color:white
+    a{ 
+      color:inherit
+    }
+  }
+}
