--- a/service/views/layout.jade
+++ b/service/views/layout.jade
@@ -20,6 +20,7 @@ html
     script(src='/javascripts/3d/GabClient.js')
     script(src='/javascripts/3d/gabscape-GabClient.js')
     script(src='/javascripts/3d/gabscape-network.js')
+    script(src='/javascripts/3d/gabsound.js')
     script(src='/javascripts/network/faye-browser.js')
     script(src='/javascripts/application.js')
     
