added tweet form

--- a/service/views/authenticated.jade
+++ b/service/views/authenticated.jade
@@ -3,5 +3,5 @@ div#user-name #{screenName}
 #twitter_input
   #twitter_profile_pic
   form#twitter_input_form
-    textarea
+    textarea#twitter_input_text
     input(type="submit", value="Tweet!")
