--- a/service/public/stylesheets/gabulous.css
+++ b/service/public/stylesheets/gabulous.css
@@ -1,12 +1,14 @@
-body {
-  background: #000;
-  color: #fff;
-}
 #twitter_button {
   display: block;
   height: 70px;
   width: 450px;
   background: url("../images/sign-in-with-twitter.png") no-repeat 0 0;
+  margin: 0 auto;
+}
+#splash {
+  width: 100%;
+  height: 670px;
+  background: url("../images/splash.png") no-repeat top center;
 }
 #container {
   overflow: hidden;
@@ -26,7 +28,7 @@ body {
   z-index: 1;
   width: 400px;
   height: 200px;
-  border: 5px solid #fff;
+  border: 5px solid #808080;
   border-radius: 5px;
   padding: 20px;
 }
@@ -36,17 +38,19 @@ body {
   border-radius: 5px;
   border: 4px solid #fff;
 }
+#index-container {
+  width: 100%;
+}
 footer {
+  margin: 0 auto;
+  margin-top: 50px;
   height: 50px;
-  position: absolute;
-  bottom: 0;
   width: 98%;
 }
 footer li {
   list-style-type: none;
-  margin-right: 10px;
+  padding: 0 10px;
   float: left;
-  color: #fff;
 }
 footer li a {
   color: inherit;
