--- a/service/public/stylesheets/gabulous.styl
+++ b/service/public/stylesheets/gabulous.styl
@@ -1,13 +1,15 @@
-body {
-  background:black;
-  color: white;
-}
-
 #twitter_button {
   display:block;
   height:70px;
   width:450px;
   background: url('../images/sign-in-with-twitter.png') no-repeat 0 0;
+  margin:0 auto;
+}
+
+#splash {
+  width:100%;
+  height:670px;
+  background: url('../images/splash.png') no-repeat top center;
 }
 
 #container {
@@ -30,7 +32,7 @@ body {
   z-index:1;
   width:400px;
   height:200px;
-  border:5px solid white;
+  border:5px solid gray;
   border-radius:5px; 
   padding:20px;
   #twitter_profile_pic {
@@ -41,16 +43,19 @@ body {
   }
 }
 
+#index-container {
+  width:100%;
+}
+
 footer {
+  margin:0 auto;
+  margin-top:50px;
   height:50px;
-  position: absolute;
-  bottom:0;
   width:98%;
   li {
     list-style-type:none
-    margin-right:10px;
+    padding:0 10px;
     float:left;
-    color:white
     a{ 
       color:inherit
     }
