--- a/service/public/stylesheets/gabulous.styl
+++ b/service/public/stylesheets/gabulous.styl
@@ -24,6 +24,10 @@
   color:black;
 }
 
+#user-name {
+  visibility:hidden;
+}
+
 #twitter_input {
   position:absolute;
   background: #99ccff;
@@ -31,11 +35,16 @@
   right:40px;
   z-index:1;
   width:400px;
-  height:200px;
+  height:60px;
   border:5px solid gray;
   border-radius:5px; 
   padding:20px;
+  textarea {
+    width: 300px;
+  }
   #twitter_profile_pic {
+    margin-right:10px;
+    float:left;
     height:48px;
     width:48px;
     border-radius:5px;
