--- a/service/views/authenticated.jade
+++ b/service/views/authenticated.jade
@@ -1,3 +1,4 @@
+div#user-name #{screenName}
 #container
 #twitter_input
   #twitter_profile_pic
@@ -61,7 +62,7 @@ script(src='/javascripts/application.js')
 |</script>
   
 
-|<script id="toonVertexShader" src="/javascripts/shader2.js" type="x-shader/x-vertex">
+|<script id="toonVertexShader" type="x-shader/x-vertex">
 | varying vec3 vViewPosition;
 | varying vec3 vNormal;
 | varying vec2 vUv;
