--- a/service/public/stylesheets/gabulous.css
+++ b/service/public/stylesheets/gabulous.css
@@ -51,9 +51,8 @@
 }
 footer {
   margin: 0 auto;
-  margin-top: 50px;
   height: 50px;
-  width: 98%;
+  width: 1210px;
 }
 footer li {
   list-style-type: none;
