--- a/service/public/stylesheets/gabulous.styl
+++ b/service/public/stylesheets/gabulous.styl
@@ -58,9 +58,8 @@
 
 footer {
   margin:0 auto;
-  margin-top:50px;
   height:50px;
-  width:98%;
+  width:1210px;
   li {
     list-style-type:none
     padding:0 10px;
